[gd_scene load_steps=20 format=3 uid="uid://cq2s7jr5qgvmy"]

[ext_resource type="FontFile" uid="uid://c882i8e2mg7wd" path="res://assets/fonts/MerchantCopy-GOXq.ttf" id="1_24ilj"]
[ext_resource type="PackedScene" uid="uid://cyc3fr8p5vf5" path="res://scenes/popup.tscn" id="1_pg70h"]
[ext_resource type="Script" path="res://scripts/receipt_label_container.gd" id="2_7y6xr"]
[ext_resource type="Texture2D" uid="uid://dgkanbqmsqqj0" path="res://assets/paper_bg.jpg" id="2_ohcd1"]
[ext_resource type="Script" path="res://scripts/sale_summary.gd" id="3_w12bu"]
[ext_resource type="AudioStream" uid="uid://wiv5rg0huxgt" path="res://assets/money_counter.mp3" id="4_b5gom"]
[ext_resource type="Script" path="res://scripts/resolution_label.gd" id="4_inaw1"]
[ext_resource type="Script" path="res://scripts/color_mastery_label.gd" id="5_byj1x"]
[ext_resource type="Script" path="res://scripts/effort_bonus.gd" id="6_jqhll"]
[ext_resource type="Script" path="res://scripts/base_price_label.gd" id="6_yenhx"]
[ext_resource type="Script" path="res://scripts/detail_bonus.gd" id="7_772v4"]
[ext_resource type="Script" path="res://scripts/total_price.gd" id="8_jvcyd"]
[ext_resource type="Script" path="res://scripts/market_fluctuations.gd" id="9_nvc12"]
[ext_resource type="Script" path="res://scripts/total_received.gd" id="10_623oi"]
[ext_resource type="Script" path="res://scripts/insta_sell_commission.gd" id="11_ht68x"]
[ext_resource type="Script" path="res://scripts/net_gain.gd" id="12_7lr6g"]
[ext_resource type="Script" path="res://scripts/new_file_button.gd" id="13_p0c1k"]
[ext_resource type="PackedScene" uid="uid://c3auimvay4uhp" path="res://scenes/money_label.tscn" id="16_tmdty"]

[sub_resource type="Theme" id="Theme_nxqd2"]
default_font = ExtResource("1_24ilj")

[node name="Sell" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_nxqd2")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 4032.0
offset_bottom = 2688.0
texture = ExtResource("2_ohcd1")

[node name="NewFileFeeConfirmation" parent="." instance=ExtResource("1_pg70h")]
visible = false
layout_mode = 2
anchors_preset = 0
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 133.0
offset_top = -96.0
offset_right = 429.0
offset_bottom = 39.0
grow_vertical = 2

[node name="Label" parent="NewFileFeeConfirmation/VBoxContainer" index="0"]
text = "A file addition fee of 5A
will be charged for making
a new file."

[node name="MoneyCounter" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_b5gom")

[node name="ReceiptLabelContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("2_7y6xr")

[node name="SaleSummary" type="Label" parent="ReceiptLabelContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 0.635294)
theme_override_colors/font_shadow_color = Color(0.67451, 0.67451, 0.67451, 0.313726)
theme_override_font_sizes/font_size = 64
text = "INSTA-SALE SUMMARY"
horizontal_alignment = 1
script = ExtResource("3_w12bu")

[node name="BasePriceLabel" type="Label" parent="ReceiptLabelContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 0.635294)
theme_override_colors/font_shadow_color = Color(0.67451, 0.67451, 0.67451, 0.313726)
theme_override_font_sizes/font_size = 32
text = "Base Price: 10A"
script = ExtResource("6_yenhx")

[node name="ResolutionLabel" type="Label" parent="ReceiptLabelContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 0.635294)
theme_override_colors/font_shadow_color = Color(0.67451, 0.67451, 0.67451, 0.313726)
theme_override_font_sizes/font_size = 32
script = ExtResource("4_inaw1")

[node name="ColorMasteryLabel" type="Label" parent="ReceiptLabelContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 0.635294)
theme_override_colors/font_shadow_color = Color(0.67451, 0.67451, 0.67451, 0.313726)
theme_override_font_sizes/font_size = 32
script = ExtResource("5_byj1x")

[node name="EffortBonus" type="Label" parent="ReceiptLabelContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 0.635294)
theme_override_colors/font_shadow_color = Color(0.67451, 0.67451, 0.67451, 0.313726)
theme_override_font_sizes/font_size = 32
script = ExtResource("6_jqhll")

[node name="DetailBonus" type="Label" parent="ReceiptLabelContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 0.635294)
theme_override_colors/font_shadow_color = Color(0.67451, 0.67451, 0.67451, 0.313726)
theme_override_font_sizes/font_size = 32
script = ExtResource("7_772v4")

[node name="TotalPrice" type="Label" parent="ReceiptLabelContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 0.635294)
theme_override_colors/font_shadow_color = Color(0.67451, 0.67451, 0.67451, 0.313726)
theme_override_font_sizes/font_size = 32
script = ExtResource("8_jvcyd")

[node name="MarketFluctuations" type="Label" parent="ReceiptLabelContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 0.635294)
theme_override_colors/font_shadow_color = Color(0.67451, 0.67451, 0.67451, 0.313726)
theme_override_font_sizes/font_size = 32
script = ExtResource("9_nvc12")

[node name="TotalReceived" type="Label" parent="ReceiptLabelContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 0.635294)
theme_override_colors/font_shadow_color = Color(0.67451, 0.67451, 0.67451, 0.313726)
theme_override_font_sizes/font_size = 32
script = ExtResource("10_623oi")

[node name="InstaSellCommission" type="Label" parent="ReceiptLabelContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 0.635294)
theme_override_colors/font_shadow_color = Color(0.67451, 0.67451, 0.67451, 0.313726)
theme_override_font_sizes/font_size = 32
script = ExtResource("11_ht68x")

[node name="NetGain" type="Label" parent="ReceiptLabelContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 0.635294)
theme_override_colors/font_shadow_color = Color(0.67451, 0.67451, 0.67451, 0.313726)
theme_override_font_sizes/font_size = 32
script = ExtResource("12_7lr6g")

[node name="NewFileButton" type="Button" parent="ReceiptLabelContainer" node_paths=PackedStringArray("new_file_fee_confirmation_node")]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "NEW FILE"
script = ExtResource("13_p0c1k")
new_file_fee_confirmation_node = NodePath("../../NewFileFeeConfirmation")

[node name="MoneyLabel" parent="ReceiptLabelContainer" instance=ExtResource("16_tmdty")]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)

[connection signal="cancel_pressed" from="NewFileFeeConfirmation" to="ReceiptLabelContainer" method="_on_new_file_fee_confirmation_cancel_pressed"]
[connection signal="ok_pressed" from="NewFileFeeConfirmation" to="ReceiptLabelContainer" method="_on_new_file_fee_confirmation_ok_pressed"]
[connection signal="pressed" from="ReceiptLabelContainer/NewFileButton" to="ReceiptLabelContainer/NewFileButton" method="_on_pressed"]

[editable path="NewFileFeeConfirmation"]
[editable path="NewFileFeeConfirmation/VBoxContainer/HBoxContainer/CancelButton/PopupPaywall"]
